# JIT_AOT_compilers

./: .clang-format  .clang_format  .gitignore  CMakeLists.txt  README.md
generation/: CMakeLists.txt  IRBuilder.cpp  IRGenerator.cpp  basic_block.cpp  factorial_generation.cpp  graph.cpp  instruction.cpp
generation/include/: IRBuilder.hpp  basic_block.hpp  graph.hpp  instruction.hpp  instruction_info.hpp  instructions_impl.hpp
ir/: CMakeLists.txt  IRGenerator.cpp  basic_block.cpp  graph.cpp  instruction.cpp  loop.cpp
ir/include/: IRGenerator.hpp  basic_block.hpp  graph.hpp  instruction_info.hpp  instructions_impl.hpp  loop.hpp
ir/tests/: CMakeLists.txt  dtree_tests.cpp  factorial_generation_test.cpp  loop_analyzer_tests.cpp
utils/: defines.hpp
